--- a/quadriceps.css
+++ b/quadriceps.css
@@ -15,19 +15,13 @@
     text-align: center;
  }
 
- 
-
- .extensora{
-   display: flex;
-   
- }
-
 iframe {
    margin-top: 2.5rem;
 }
 
 .adultora {
    display: flex;
+    margin-left: 30px;
 }
 
 nav  a{
@@ -175,3 +169,4 @@ body::before {
     background: rgba(0, 0, 0, 0.5); 
   z-index:-1 
 }
+
